Add documentation to run from the command line